--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "react-simple",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.43.65:9000",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "base-64": "^1.0.0",
     "peerjs": "^1.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
