--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "react-simple",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
-  "proxy": "http://192.168.43.65:9000",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "base-64": "^1.0.0",
+    "cross-env": "^7.0.3",
     "peerjs": "^1.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -17,7 +18,7 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env HTTPS=true SSL_CRT_FILE=./host.cert SSL_KEY_FILE=./host.key react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
