--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -12,6 +13,7 @@
     "base-64": "^1.0.0",
     "cross-env": "^7.0.3",
     "detect-browser": "^5.2.0",
+    "material-ui-icons": "^1.0.0-beta.36",
     "peerjs": "^1.3.1",
     "randomstring": "^1.1.5",
     "react": "^17.0.1",
